--- a/diary/templates/diary_list.html
+++ b/diary/templates/diary_list.html
@@ -10,13 +10,17 @@
           <thead>
               <tr>
                   <th scope="col">Diary Type</th>
+                  <th scope="col">Story Name</th>
                   <th scope="col">Username</th>
+                  <th scope="col">Date</th>
               </tr>
           </thead>
           {% for record in records %}
               <tr>
+                  <td>{{ record['diary_type'] }}</td>
                   <td>{{ record['story_name'] }}</td>
                   <td>{{ record['username'] }}</td>
+                  <td>{{ record['diary_date'] }}</td>         
               </tr>
           {% endfor %}
       </table>
