--- a/diary/templates/story_detail.html
+++ b/diary/templates/story_detail.html
@@ -13,7 +13,7 @@
                   <th scope="col">Average process</th>
                   <th scope="col">Max process</th>
                   <th scope="col">Average working days</th>
-                  <th scope="col">Total woring days</th>
+                  <th scope="col">Total working days</th>
               </tr>
           </thead>
           {% for story in stories %}
